--- a/WebUI/ClientApp/src/app/manager/components/client-list/client-list.component.sass
+++ b/WebUI/ClientApp/src/app/manager/components/client-list/client-list.component.sass
@@ -3,4 +3,8 @@
     overflow: auto
 
 table 
-  width: 3300px
+  width: 7300px
+  border-spacing: 0
+  td, th 
+    padding: 10px 5px
+    border: 1px solid #eee
