--- a/WebUI/ClientApp/src/app/manager-rm/clients/containers/clients/clients.component.html
+++ b/WebUI/ClientApp/src/app/manager-rm/clients/containers/clients/clients.component.html
@@ -1,3 +1,5 @@
-<p>
-  clients works!
-</p>
+<app-client-list 
+    [clients]="clients$ | async" 
+    (clientCreated)="createClient($event)"
+    (clientUpdated)="updateClient($event)">
+</app-client-list>
