--- a/WebUI/ClientApp/src/app/manager-rm/clients/components/client-list/client-list.component.sass
+++ b/WebUI/ClientApp/src/app/manager-rm/clients/components/client-list/client-list.component.sass
@@ -1,6 +1,11 @@
 ::ng-deep tr.mat-row
-    cursor: pointer
-    .mat-form-field
-        width: 45px
+    cursor: pointer   
     &:hover
         background-color: #f6f6f6
+
+::ng-deep .mat-form-field-infix
+    border-top: 0px
+
+.numberInputField
+    width: 45px
+    height: 27px
