--- a/WebUI/ClientApp/src/app/manager-rm/clients/dialogs/create-client-dialog/create-client-dialog.component.html
+++ b/WebUI/ClientApp/src/app/manager-rm/clients/dialogs/create-client-dialog/create-client-dialog.component.html
@@ -1,3 +1,5 @@
+<h3 mat-dialog-title>Создание</h3>
+
 <form [formGroup]="createClientForm">
   <mat-form-field>
     <input matInput placeholder="Название" formControlName="title">
