--- a/WebUI/ClientApp/src/app/manager-rm/clients/dialogs/edit-client-dialog/edit-client-dialog.component.html
+++ b/WebUI/ClientApp/src/app/manager-rm/clients/dialogs/edit-client-dialog/edit-client-dialog.component.html
@@ -1,3 +1,5 @@
+<h3 mat-dialog-title>Редактирование</h3>
+
 <form >
     <mat-form-field>
       <input matInput placeholder="Название" [(ngModel)]="data.title" [ngModelOptions]="{standalone: true}">
