Планы по неделям

--- a/WebUI/ClientApp/src/styles.sass
+++ b/WebUI/ClientApp/src/styles.sass
@@ -1,5 +1,24 @@
 @import '@angular/material/prebuilt-themes/deeppurple-amber.css'
 
 
+body
+    background: #f2f3f8
+    margin: 0
+    padding: 0
+    position: relative
+
 table 
     width: 100%
+
+.dialog-actions
+    text-align: center
+
+
+ul
+    list-style: none
+    margin: 0
+    padding: 0
+
+a
+    color: inherit
+    text-decoration: none
