--- a/WebUI/ClientApp/src/app/manager-rm/clients/components/client-list/client-list.component.html
+++ b/WebUI/ClientApp/src/app/manager-rm/clients/components/client-list/client-list.component.html
@@ -1,79 +1,97 @@
-<button color="primary" mat-raised-button (click)="openCreateClientForm()">Добавить</button>
 
-<table mat-table [dataSource]="clients" class="mat-elevation-z1">
 
-  <ng-container matColumnDef="id">
-    <th mat-header-cell *matHeaderCellDef> # </th>
-    <td mat-cell *matCellDef="let element"> {{element.id}} </td>
-  </ng-container>
+<mat-card class="mat-elevation-z1">
+  <mat-card-header>
+    <mat-card-title>Клиенты</mat-card-title>
+    <button class="addEntity" color="primary" mat-raised-button (click)="openCreateClientForm()">Добавить</button>
+  </mat-card-header>
+  <mat-card-content>
+      <table mat-table [dataSource]="clients">
+        
+          <ng-container matColumnDef="title">
+            <th mat-header-cell *matHeaderCellDef> Название </th>
+            <td mat-cell *matCellDef="let element"> {{element.title}} </td>
+          </ng-container>
+        
+          <ng-container matColumnDef="type">
+            <th mat-header-cell *matHeaderCellDef> Тип </th>
+            <td mat-cell *matCellDef="let element"> {{element.type}} </td>
+          </ng-container>
+        
+          <ng-container matColumnDef="numberOfCalls">
+            <th mat-header-cell *matHeaderCellDef> Переодичность <br> звонков </th>
+            <td mat-cell *matCellDef="let element"> {{element.numberOfCalls}} </td>
+          </ng-container>
+        
+          <ng-container matColumnDef="numberOfShipments">
+            <th mat-header-cell *matHeaderCellDef> Переодичность <br> отгрузок </th>
+            <td mat-cell *matCellDef="let element"> {{element.numberOfShipments}} </td>
+          </ng-container>
+        
+          <ng-container matColumnDef="nomenclatureAnalysis">
+            <th mat-header-cell *matHeaderCellDef> Анализ по номен-ре </th>
+            <td mat-cell *matCellDef="let element" [style.background-color]="getAnalysisColor(getAvgAnalysis(element.nomenclatureAnalysis))" (click)="openNomenclatureAnalysis(element)"><b>{{getAvgAnalysis(element.nomenclatureAnalysis)}}%</b></td>
+          </ng-container>
+        
+          <ng-container matColumnDef="revenueAnalysis">
+            <th mat-header-cell *matHeaderCellDef> Анализ по выручке </th>
+            <td mat-cell *matCellDef="let element" [style.background-color]="getAnalysisColor(getAvgAnalysis(element.revenueAnalysis))" (click)="openRevenueAnalysis(element)"><b>{{getAvgAnalysis(element.revenueAnalysis)}}%</b></td>
+          </ng-container>
+        
+          <ng-container matColumnDef="callPlan.collective">
+            <th mat-header-cell *matHeaderCellDef> Общий план </th>
+            <td mat-cell *matCellDef="let element"> {{element.callPlan?.collective}} </td>
+          </ng-container>
+        
+          <ng-container matColumnDef="callPlan.MS">
+            <th mat-header-cell *matHeaderCellDef> МС </th>
+            <td mat-cell *matCellDef="let element">
+              <mat-form-field class="numberInputField">
+                <input matInput [(ngModel)]="element.callPlan.MS" (focusout)="updateClient(element)"/>
+              </mat-form-field>        
+            </td>
+          </ng-container>
+        
+          <ng-container matColumnDef="callPlan.RM">
+            <th mat-header-cell *matHeaderCellDef> РМ </th>
+            <td mat-cell *matCellDef="let element"> {{element.callPlan?.RM}} </td>
+          </ng-container>
+        
+          <ng-container matColumnDef="tripPlan.planned">
+            <th mat-header-cell *matHeaderCellDef> План </th>
+            <td mat-cell *matCellDef="let element">
+              <mat-form-field class="numberInputField">
+                <input matInput [(ngModel)]="element.tripPlan.planned" (focusout)="updateClient(element)"/>
+              </mat-form-field>  
+            </td>
+          </ng-container>
+        
+          <ng-container matColumnDef="tripPlan.fact">
+            <th mat-header-cell *matHeaderCellDef> Факт </th>
+            <td mat-cell *matCellDef="let element">
+              <mat-form-field class="numberInputField">
+                <input matInput [(ngModel)]="element.tripPlan.fact" (focusout)="updateClient(element)"/>
+              </mat-form-field>  
+            </td>
+          </ng-container>
+        
+          <ng-container matColumnDef="RMplanned">
+            <th mat-header-cell *matHeaderCellDef> План РМ </th>
+            <td mat-cell *matCellDef="let element" (click)="openWeekPlans(element.weekPlans)">
+              {{getCurrentWeek(element.weekPlans).RMplanned}}
+            </td>
+          </ng-container>
+        
+          <ng-container matColumnDef="RMfact">
+            <th mat-header-cell *matHeaderCellDef> Факт РМ </th>
+            <td mat-cell *matCellDef="let element" (click)="openWeekPlans(element.weekPlans)">
+              {{getCurrentWeek(element.weekPlans).RMfact}}
+            </td>
+          </ng-container>
+        
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns;" (dblclick)="openEditClientForm(row)"></tr>
+        </table>
+  </mat-card-content>
+</mat-card>
 
-  <ng-container matColumnDef="title">
-    <th mat-header-cell *matHeaderCellDef> Название </th>
-    <td mat-cell *matCellDef="let element"> {{element.title}} </td>
-  </ng-container>
-
-  <ng-container matColumnDef="type">
-    <th mat-header-cell *matHeaderCellDef> Тип </th>
-    <td mat-cell *matCellDef="let element"> {{element.type}} </td>
-  </ng-container>
-
-  <ng-container matColumnDef="numberOfCalls">
-    <th mat-header-cell *matHeaderCellDef> Переодичность звонков </th>
-    <td mat-cell *matCellDef="let element"> {{element.numberOfCalls}} </td>
-  </ng-container>
-
-  <ng-container matColumnDef="numberOfShipments">
-    <th mat-header-cell *matHeaderCellDef> Переодичность отгрузок </th>
-    <td mat-cell *matCellDef="let element"> {{element.numberOfShipments}} </td>
-  </ng-container>
-
-  <ng-container matColumnDef="nomenclatureAnalysis">
-    <th mat-header-cell *matHeaderCellDef> Анализ по номен-ре </th>
-    <td mat-cell *matCellDef="let element" [style.background-color]="getAnalysisColor(getAvgAnalysis(element.nomenclatureAnalysis))" (click)="openNomenclatureAnalysis(element)"><b>{{getAvgAnalysis(element.nomenclatureAnalysis)}}%</b></td>
-  </ng-container>
-
-  <ng-container matColumnDef="revenueAnalysis">
-    <th mat-header-cell *matHeaderCellDef> Анализ по выручке </th>
-    <td mat-cell *matCellDef="let element" [style.background-color]="getAnalysisColor(getAvgAnalysis(element.revenueAnalysis))" (click)="openRevenueAnalysis(element)"><b>{{getAvgAnalysis(element.revenueAnalysis)}}%</b></td>
-  </ng-container>
-
-  <ng-container matColumnDef="callPlan.collective">
-    <th mat-header-cell *matHeaderCellDef> Общий план </th>
-    <td mat-cell *matCellDef="let element"> {{element.callPlan?.collective}} </td>
-  </ng-container>
-
-  <ng-container matColumnDef="callPlan.MS">
-    <th mat-header-cell *matHeaderCellDef> МС </th>
-    <td mat-cell *matCellDef="let element">
-      <mat-form-field class="numberInputField">
-        <input matInput [(ngModel)]="element.callPlan.MS" (focusout)="updateClient(element)"/>
-      </mat-form-field>        
-    </td>
-  </ng-container>
-
-  <ng-container matColumnDef="callPlan.RM">
-    <th mat-header-cell *matHeaderCellDef> РМ </th>
-    <td mat-cell *matCellDef="let element"> {{element.callPlan?.RM}} </td>
-  </ng-container>
-
-  <ng-container matColumnDef="tripPlan.planned">
-    <th mat-header-cell *matHeaderCellDef> План </th>
-    <td mat-cell *matCellDef="let element">
-      <mat-form-field class="numberInputField">
-        <input matInput [(ngModel)]="element.tripPlan.planned" (focusout)="updateClient(element)"/>
-      </mat-form-field>  
-    </td>
-  </ng-container>
-
-  <ng-container matColumnDef="tripPlan.fact">
-    <th mat-header-cell *matHeaderCellDef> Факт </th>
-    <td mat-cell *matCellDef="let element">
-      <mat-form-field class="numberInputField">
-        <input matInput [(ngModel)]="element.tripPlan.fact" (focusout)="updateClient(element)"/>
-      </mat-form-field>  
-    </td>
-  </ng-container>
-
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns;" (dblclick)="openEditClientForm(row)"></tr>
-</table>
