--- a/WebUI/ClientApp/src/app/manager-rm/clients/components/client-list/client-list.component.sass
+++ b/WebUI/ClientApp/src/app/manager-rm/clients/components/client-list/client-list.component.sass
@@ -10,6 +10,13 @@
     width: 45px
     height: 27px
 
+.textInputField
+    height: 27px
+
 td
     padding-left: 5px !important
     padding-right: 5px !important
+
+.addEntity
+    position: absolute
+    right: 20px
