--- a/WebUI/ClientApp/src/app/manager-rm/manager-rm.component.html
+++ b/WebUI/ClientApp/src/app/manager-rm/manager-rm.component.html
@@ -1,7 +1,15 @@
-<p>
-  Меню
-</p>
+<mat-toolbar class="mat-elevation-z2">
+  <div class="logo">
+    Мир Суши
+  </div>
+  <nav>
+    <ul>
+      <li><a href="" mat-button color="primary" class="active">Клиенты</a></li>
+    </ul>
+  </nav>
+</mat-toolbar>
 
-<div>
+
+<div class="wrapper">
   <router-outlet></router-outlet> 
 </div>
