--- a/WebUI/ClientApp/src/app/manager-rm/clients/components/client-list/client-list.component.html
+++ b/WebUI/ClientApp/src/app/manager-rm/clients/components/client-list/client-list.component.html
@@ -42,7 +42,7 @@
             <th mat-header-cell *matHeaderCellDef> Общий план </th>
             <td mat-cell *matCellDef="let element"> {{element.callPlan?.collective}} </td>
           </ng-container>
-        
+          
           <ng-container matColumnDef="callPlan.MS">
             <th mat-header-cell *matHeaderCellDef> МС </th>
             <td mat-cell *matCellDef="let element">
@@ -70,21 +70,25 @@
             <th mat-header-cell *matHeaderCellDef> Факт </th>
             <td mat-cell *matCellDef="let element">
               <mat-form-field class="numberInputField">
-                <input matInput [(ngModel)]="element.tripPlan.fact" (focusout)="updateClient(element)"/>
+                <mat-select [(ngModel)]="element.tripPlan.fact" (focusout)="updateClient(element)" >
+                  <mat-option [value]="1">1</mat-option>                  
+                  <mat-option [value]="0.5">0.5</mat-option>
+                  <mat-option [value]="0.3">0.3</mat-option>
+                </mat-select>
               </mat-form-field>  
             </td>
           </ng-container>
         
           <ng-container matColumnDef="RMplanned">
             <th mat-header-cell *matHeaderCellDef> План РМ </th>
-            <td mat-cell *matCellDef="let element" (click)="openWeekPlans(element.weekPlans)">
+            <td mat-cell *matCellDef="let element" (click)="openWeekPlans(element)">
               {{getCurrentWeek(element.weekPlans).RMplanned}}
             </td>
           </ng-container>
         
           <ng-container matColumnDef="RMfact">
             <th mat-header-cell *matHeaderCellDef> Факт РМ </th>
-            <td mat-cell *matCellDef="let element" (click)="openWeekPlans(element.weekPlans)">
+            <td mat-cell *matCellDef="let element" (click)="openWeekPlans(element)">
               {{getCurrentWeek(element.weekPlans).RMfact}}
             </td>
           </ng-container>
