--- a/WebUI/ClientApp/src/app/manager-rm/clients/dialogs/week-plans/week-plans-dialog.component.html
+++ b/WebUI/ClientApp/src/app/manager-rm/clients/dialogs/week-plans/week-plans-dialog.component.html
@@ -1,6 +1,6 @@
 <h3 mat-dialog-title>{{data.title}}. План по задачам</h3>
 
-<table mat-table #table [dataSource]="data">
+<table mat-table #table [dataSource]="data.weekPlans">
   <ng-container matColumnDef="Number">
     <th mat-header-cell *matHeaderCellDef>Неделя</th>
     <td mat-cell *matCellDef="let row; let i = index">{{i + 1}}</td>
