--- a/WebUI/ClientApp/src/app/manager-rm/clients/components/client-list/client-list.component.html
+++ b/WebUI/ClientApp/src/app/manager-rm/clients/components/client-list/client-list.component.html
@@ -15,17 +15,17 @@
         
           <ng-container matColumnDef="type">
             <th mat-header-cell *matHeaderCellDef> Тип </th>
-            <td mat-cell *matCellDef="let element"> {{element.type}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.type | clientTypeTranslate}} </td>
           </ng-container>
         
           <ng-container matColumnDef="numberOfCalls">
             <th mat-header-cell *matHeaderCellDef> Переодичность <br> звонков </th>
-            <td mat-cell *matCellDef="let element"> {{element.numberOfCalls}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.numberOfCalls | numberOfCallsTranslate}} </td>
           </ng-container>
         
           <ng-container matColumnDef="numberOfShipments">
             <th mat-header-cell *matHeaderCellDef> Переодичность <br> отгрузок </th>
-            <td mat-cell *matCellDef="let element"> {{element.numberOfShipments}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.numberOfShipments | numberOfShipmentsTranslate}} </td>
           </ng-container>
         
           <ng-container matColumnDef="nomenclatureAnalysis">
@@ -74,22 +74,51 @@
                   <mat-option [value]="1">1</mat-option>                  
                   <mat-option [value]="0.5">0.5</mat-option>
                   <mat-option [value]="0.3">0.3</mat-option>
+                  <mat-option [value]="0">0</mat-option>
                 </mat-select>
               </mat-form-field>  
             </td>
           </ng-container>
         
+          <ng-container matColumnDef="MSplanned">
+            <th mat-header-cell *matHeaderCellDef> План МС </th>
+            <td mat-cell *matCellDef="let element" (click)="openWeekPlans(element)">
+              {{getCurrentWeek(element.weekPlans).MSplanned}}
+            </td>
+          </ng-container>
+
           <ng-container matColumnDef="RMplanned">
             <th mat-header-cell *matHeaderCellDef> План РМ </th>
             <td mat-cell *matCellDef="let element" (click)="openWeekPlans(element)">
               {{getCurrentWeek(element.weekPlans).RMplanned}}
             </td>
           </ng-container>
+
+          <ng-container matColumnDef="MSfact">
+              <th mat-header-cell *matHeaderCellDef> Факт МС </th>
+              <td mat-cell *matCellDef="let element" (click)="openWeekPlans(element)">
+                {{getCurrentWeek(element.weekPlans).MSfact}}
+              </td>
+          </ng-container>
         
           <ng-container matColumnDef="RMfact">
             <th mat-header-cell *matHeaderCellDef> Факт РМ </th>
             <td mat-cell *matCellDef="let element" (click)="openWeekPlans(element)">
               {{getCurrentWeek(element.weekPlans).RMfact}}
+            </td>
+          </ng-container>
+
+          <ng-container matColumnDef="MSresults.sum">
+            <th mat-header-cell *matHeaderCellDef>Итого</th>
+            <td mat-cell *matCellDef="let element" (click)="openCallsResult(element)">
+              {{element.MSresults.calls + element.MSresults.whatsUp + element.MSresults.letters}}
+            </td>
+          </ng-container>
+
+          <ng-container matColumnDef="RMresults.sum">
+            <th mat-header-cell *matHeaderCellDef>Итого</th>
+            <td mat-cell *matCellDef="let element" (click)="openCallsResult(element)"> 
+              {{element.RMresults.calls + element.RMresults.whatsUp + element.RMresults.letters}}
             </td>
           </ng-container>
         
