--- a/WebUI/ClientApp/src/app/manager-rm/clients/dialogs/week-plans/week-plans-dialog.component.html
+++ b/WebUI/ClientApp/src/app/manager-rm/clients/dialogs/week-plans/week-plans-dialog.component.html
@@ -5,11 +5,27 @@
     <th mat-header-cell *matHeaderCellDef>Неделя</th>
     <td mat-cell *matCellDef="let row; let i = index">{{i + 1}}</td>
   </ng-container>
+  <ng-container matColumnDef="MSplanned">
+    <th mat-header-cell *matHeaderCellDef>МС план</th>
+    <td mat-cell *matCellDef="let row">
+      <mat-form-field>
+        <textarea matInput [(ngModel)]="row.MSplanned"></textarea>
+      </mat-form-field>
+    </td>
+  </ng-container>
   <ng-container matColumnDef="RMplanned">
     <th mat-header-cell *matHeaderCellDef>РМ план</th>
     <td mat-cell *matCellDef="let row">
       <mat-form-field>
         <textarea matInput [(ngModel)]="row.RMplanned"></textarea>
+      </mat-form-field>
+    </td>
+  </ng-container>
+  <ng-container matColumnDef="MSfact">
+    <th mat-header-cell *matHeaderCellDef>МС факт </th>
+    <td mat-cell *matCellDef="let row">
+      <mat-form-field>
+        <textarea matInput [(ngModel)]="row.MSfact"></textarea>
       </mat-form-field>
     </td>
   </ng-container>
