то что вчера делал

--- a/WebUI/ClientApp/src/app/manager-rm/manager-rm.component.html
+++ b/WebUI/ClientApp/src/app/manager-rm/manager-rm.component.html
@@ -4,7 +4,8 @@
   </div>
   <nav>
     <ul>
-      <li><a href="" mat-button color="primary" class="active">Клиенты</a></li>
+      <li><a href="">Главная</a></li>
+      <li><a href="" class="active">Клиенты</a></li>     
     </ul>
   </nav>
 </mat-toolbar>
