--- a/WebUI/ClientApp/src/app/manager-rm/clients/components/client-list/client-list.component.html
+++ b/WebUI/ClientApp/src/app/manager-rm/clients/components/client-list/client-list.component.html
@@ -1,7 +1,7 @@
 <mat-card class="mat-elevation-z1">
   <mat-card-header>
-    <mat-card-title>Клиенты</mat-card-title>
-    <button class="addEntity" color="primary" mat-raised-button (click)="openCreateClientForm()">Добавить</button>
+    <mat-card-title class="card-title">Клиенты</mat-card-title>
+    <button class="addEntity" (click)="openCreateClientForm()">+ Добавить клиента</button>
   </mat-card-header>
   <mat-card-content>
       <table mat-table [dataSource]="clients">
@@ -10,6 +10,11 @@
             <th mat-header-cell *matHeaderCellDef>Название</th>
             <td mat-cell *matCellDef="let element">{{element.title}} </td>
           </ng-container>
+
+          <ng-container matColumnDef="phone">
+            <th mat-header-cell *matHeaderCellDef>Телефон</th>
+            <td mat-cell *matCellDef="let element">{{element.phone}} </td>
+          </ng-container>
         
           <ng-container matColumnDef="type">
             <th mat-header-cell *matHeaderCellDef>Тип</th>
@@ -17,94 +22,107 @@
           </ng-container>
         
           <ng-container matColumnDef="numberOfCalls">
-            <th mat-header-cell *matHeaderCellDef>Переодичность<br>звонков</th>
+            <th mat-header-cell *matHeaderCellDef>Звонки</th>
             <td mat-cell *matCellDef="let element">{{element.numberOfCalls | numberOfCallsTranslate}} </td>
           </ng-container>
         
           <ng-container matColumnDef="numberOfShipments">
-            <th mat-header-cell *matHeaderCellDef>Переодичность<br>отгрузок</th>
+            <th mat-header-cell *matHeaderCellDef>Отгрузки</th>
             <td mat-cell *matCellDef="let element">{{element.numberOfShipments | numberOfShipmentsTranslate}} </td>
           </ng-container>
         
           <ng-container matColumnDef="nomenclatureAnalysis">
-            <th mat-header-cell *matHeaderCellDef>Анализ по номен-ре</th>
-            <td mat-cell *matCellDef="let element" [style.background-color]="getAnalysisColor(getAvgAnalysis(element.nomenclatureAnalysis))" (click)="openNomenclatureAnalysis(element)"><b>{{getAvgAnalysis(element.nomenclatureAnalysis)}}%</b></td>
+            <th mat-header-cell *matHeaderCellDef>Номен-ра</th>
+            <td mat-cell *matCellDef="let element" (click)="openNomenclatureAnalysis(element)">
+              <div class="bar-shadow">
+                <div class="bar" 
+                  [style.background-color]="getAnalysisProps(getAvgAnalysis(element.nomenclatureAnalysis)).background" 
+                  [style.color]="getAnalysisProps(getAvgAnalysis(element.nomenclatureAnalysis)).font"  
+                  [style.width.px]="getAnalysisProps(getAvgAnalysis(element.nomenclatureAnalysis)).width">
+                  <b>{{getAvgAnalysis(element.nomenclatureAnalysis)}}%</b>  
+                </div>
+              </div>
+              
+            </td>
           </ng-container>
         
           <ng-container matColumnDef="revenueAnalysis">
-            <th mat-header-cell *matHeaderCellDef>Анализ по выручке </th>
-            <td mat-cell *matCellDef="let element" [style.background-color]="getAnalysisColor(getAvgAnalysis(element.revenueAnalysis))" (click)="openRevenueAnalysis(element)"><b>{{getAvgAnalysis(element.revenueAnalysis)}}%</b></td>
+            <th mat-header-cell *matHeaderCellDef>Выручка</th>
+            <td mat-cell *matCellDef="let element" 
+            
+            (click)="openRevenueAnalysis(element)">
+            <div class="bar-shadow">
+                <div class="bar" 
+                [style.background-color]="getAnalysisProps(getAvgAnalysis(element.revenueAnalysis)).background" 
+                [style.color]="getAnalysisProps(getAvgAnalysis(element.revenueAnalysis)).font"  
+                [style.width.px]="getAnalysisProps(getAvgAnalysis(element.revenueAnalysis)).width">
+                  <b>
+                    {{getAvgAnalysis(element.revenueAnalysis)}}%
+                  </b>
+                </div>
+            </div>
+            
+            
+          </td>
           </ng-container>
         
           <ng-container matColumnDef="callPlan.collective">
-            <th mat-header-cell *matHeaderCellDef>Общий план </th>
+            <th mat-header-cell *matHeaderCellDef style="background-color: #fdf6fd">План</th>
             <td mat-cell *matCellDef="let element">{{element.callPlan?.collective}} </td>
           </ng-container>
           
           <ng-container matColumnDef="callPlan.MS">
-            <th mat-header-cell *matHeaderCellDef>МС</th>
+            <th mat-header-cell *matHeaderCellDef style="background-color: #ffeeff">МС</th>
             <td mat-cell *matCellDef="let element">
               <mat-form-field class="numberInputField">
-                <input matInput [(ngModel)]="element.callPlan.MS" (focusout)="updateClient(element)"/>
+                <input matInput [(ngModel)]="element.callPlan.MS" style="font-weight: bold; color: #61717e" (focusout)="updateClient(element)"/>
               </mat-form-field>        
             </td>
           </ng-container>
         
           <ng-container matColumnDef="callPlan.RM">
-            <th mat-header-cell *matHeaderCellDef>РМ</th>
-            <td mat-cell *matCellDef="let element">{{element.callPlan?.RM}} </td>
+            <th mat-header-cell *matHeaderCellDef style="background-color: #ffeeff">РМ</th>
+            <td mat-cell *matCellDef="let element" style="font-weight: bold; color: #61717e">{{element.callPlan?.RM}} </td>
           </ng-container>
         
-          <ng-container matColumnDef="tripPlan.planned">
-            <th mat-header-cell *matHeaderCellDef>План</th>
+          <ng-container matColumnDef="tripPlan.planned" >
+            <th mat-header-cell *matHeaderCellDef style="background-color: #f7f8fd">План</th>
             <td mat-cell *matCellDef="let element">
               <mat-form-field class="numberInputField">
                 <input matInput [(ngModel)]="element.tripPlan.planned" (focusout)="updateClient(element)"/>
               </mat-form-field>  
             </td>
           </ng-container>
-        
-          <ng-container matColumnDef="tripPlan.fact">
-            <th mat-header-cell *matHeaderCellDef>Факт</th>
-            <td mat-cell *matCellDef="let element">
-              <mat-form-field class="numberInputField">
-                <mat-select [(ngModel)]="element.tripPlan.fact" (focusout)="updateClient(element)" >
-                  <mat-option [value]="1">1</mat-option>                  
-                  <mat-option [value]="0.5">0.5</mat-option>
-                  <mat-option [value]="0.3">0.3</mat-option>
-                  <mat-option [value]="0">0</mat-option>
-                </mat-select>
-              </mat-form-field>  
-            </td>
-          </ng-container>
+
+          <ng-container matColumnDef="tripPlan.fact" >
+              <th mat-header-cell *matHeaderCellDef style="background-color: #f0f4ff">Факт</th>
+              <td mat-cell *matCellDef="let element">
+                <mat-form-field class="numberInputField">
+                  <mat-select [(ngModel)]="element.tripPlan.fact" (focusout)="updateClient(element)">
+                    <mat-option [value]="1">1</mat-option>
+                    <mat-option [value]="0.5">0.5</mat-option>
+                    <mat-option [value]="0.3">0.3</mat-option>
+                    <mat-option [value]="0">0</mat-option>
+                  </mat-select>
+                </mat-form-field>
+              </td>
+            </ng-container>
+      
         
           <ng-container matColumnDef="MSplanned">
-            <th mat-header-cell *matHeaderCellDef>План МС </th>
+            <th mat-header-cell *matHeaderCellDef style="background-color: #f0fbff">Теущий МС</th>
             <td mat-cell *matCellDef="let element" (click)="openWeekPlans(element)">
               {{getCurrentWeek(element.weekPlans).MSplanned}}
             </td>
           </ng-container>
 
           <ng-container matColumnDef="RMplanned">
-            <th mat-header-cell *matHeaderCellDef>План РМ </th>
+            <th mat-header-cell *matHeaderCellDef style="background-color: #e3f7ff">Текущий РМ </th>
             <td mat-cell *matCellDef="let element" (click)="openWeekPlans(element)">
               {{getCurrentWeek(element.weekPlans).RMplanned}}
             </td>
           </ng-container>
 
-          <ng-container matColumnDef="MSfact">
-              <th mat-header-cell *matHeaderCellDef>Факт МС </th>
-              <td mat-cell *matCellDef="let element" (click)="openWeekPlans(element)">
-                {{getCurrentWeek(element.weekPlans).MSfact}}
-              </td>
-          </ng-container>
-        
-          <ng-container matColumnDef="RMfact">
-            <th mat-header-cell *matHeaderCellDef>Факт РМ </th>
-            <td mat-cell *matCellDef="let element" (click)="openWeekPlans(element)">
-              {{getCurrentWeek(element.weekPlans).RMfact}}
-            </td>
-          </ng-container>
 
           <ng-container matColumnDef="calls">
             <th mat-header-cell *matHeaderCellDef>Даты и звонки</th>
@@ -114,18 +132,56 @@
           </ng-container>
 
           <ng-container matColumnDef="MSresults.sum">
-            <th mat-header-cell *matHeaderCellDef>Итого</th>
+            <th mat-header-cell *matHeaderCellDef style="background-color: #f0fdf4">МС</th>
             <td mat-cell *matCellDef="let element" (click)="openCallsResult(element)">
               {{getSumOfCallsDates(element.MSCallsDates)}}
             </td>
           </ng-container>
 
           <ng-container matColumnDef="RMresults.sum">
-            <th mat-header-cell *matHeaderCellDef>Итого</th>
+            <th mat-header-cell *matHeaderCellDef style="background-color: #f5fdf0">РМ</th>
             <td mat-cell *matCellDef="let element" (click)="openCallsResult(element)"> 
               {{getSumOfCallsDates(element.RMCallsDates)}}
             </td>
           </ng-container>
+
+          <ng-container matColumnDef="filler">
+              <th mat-header-cell *matHeaderCellDef 
+                  [style.text-align]="center"
+                  [attr.colspan]="7"
+                  style="background-color: #fff"> 
+                  
+
+              </th>
+            </ng-container>
+            
+            
+          <ng-container matColumnDef="allCalls">
+            <th mat-header-cell *matHeaderCellDef [attr.colspan]="3" style="text-align: center; background-color: #ffe8ff; color: #9e7cae">Звонки </th>
+          </ng-container>
+
+          <ng-container matColumnDef="trips">
+              <th mat-header-cell *matHeaderCellDef [attr.colspan]="2" style="text-align: center; background-color: #e6efff; color: #bcc1df">Команд. </th>
+          </ng-container>
+
+          <ng-container matColumnDef="todos">
+              <th mat-header-cell *matHeaderCellDef [attr.colspan]="2" style="text-align: center; background-color: #d7f5ff; color: #94c3cb">План по задачам </th>
+          </ng-container>
+
+          <ng-container matColumnDef="filler2">
+              <th mat-header-cell *matHeaderCellDef 
+                  [style.text-align]="center"
+                  [attr.colspan]="1"
+                  style="background-color: #fff"> 
+          
+              </th>
+            </ng-container>
+
+          <ng-container matColumnDef="allResults">
+              <th mat-header-cell *matHeaderCellDef [attr.colspan]="2" style="text-align: center; background-color: #e9fff2; color: #8db39a">Итоги </th>
+          </ng-container>
+          
+          <tr class="sub-header" mat-header-row *matHeaderRowDef="['filler', 'allCalls', 'trips', 'todos', 'filler2', 'allResults']" style="height: 30px"></tr>
         
           <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
           <tr mat-row *matRowDef="let row; columns: displayedColumns;" (dblclick)="openEditClientForm(row)"></tr>
