--- a/WebUI/ClientApp/src/app/manager-rm/manager-rm.component.sass
+++ b/WebUI/ClientApp/src/app/manager-rm/manager-rm.component.sass
@@ -1,16 +1,29 @@
 .mat-toolbar
     background-color: #fff
     margin-bottom: 40px
-    height: 80px
+    height: 95px
 
 .wrapper
     padding: 0px 10px
 
 nav
     margin-left: 40px
+    li 
+        display: inline-block
+    a
+        padding: 20px 35px
+        color: #4d73a4
+        font-size: 16px
+        margin-right: 10px
+        transition: 0.3s
+        border-radius: 20px
+        &:hover
+            background-color: #f7fcff
+    a.active 
+        background-color: #f7fcff
 
-a.active 
-    background-color: #e8eaf6
+.logo
+    font-weight: bold
 
 
 
