--- a/WebUI/ClientApp/src/app/manager-rm/clients/dialogs/analysis-dialog/analysis-dialog.component.html
+++ b/WebUI/ClientApp/src/app/manager-rm/clients/dialogs/analysis-dialog/analysis-dialog.component.html
@@ -1,22 +1,85 @@
-<h3 mat-dialog-title>{{data.title}}. {{data.analysisTitle}}</h3>
+<h3 class="dialog-title" mat-dialog-title>{{data.title}}</h3>
+<button class="close" (click)="close()"><i class="fas fa-times fa-2x"></i></button>
 
-<table mat-table #table [dataSource]="data.analysis">
-  <ng-container matColumnDef="reportPrevMonth">
-    <th mat-header-cell *matHeaderCellDef>Относительно <br> пред. мес. </th>
-    <td mat-cell *matCellDef="let row">{{row.reportPrevMonth}}</td>
-  </ng-container>
-  <ng-container matColumnDef="reportAvg5Months">
-    <th mat-header-cell *matHeaderCellDef>Относительно <br> Среднего по пред. 5ти мес.</th>
-    <td mat-cell *matCellDef="let row">{{row.reportAvg5Months}}</td>
-  </ng-container>
-  <ng-container matColumnDef="prevMonth">
-    <th mat-header-cell *matHeaderCellDef>Пред. месяц </th>
-    <td mat-cell *matCellDef="let row">{{row.prevMonth}}</td>
-  </ng-container>
-  <ng-container matColumnDef="avg5Months">
-    <th mat-header-cell *matHeaderCellDef>В среднем по пред. 5ти мес. </th>
-    <td mat-cell *matCellDef="let row">{{row.avg5Months}}</td>
-  </ng-container>
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+
+<div class="analysis-title">
+  <h3>{{data.analysisTitle}}</h3>
+  <span>июнь</span>
+</div>
+<div class="analysis-subtitle">
+  <span>Отчетный месяц</span>
+</div>
+
+<table>
+  <tbody>
+    <tr>
+      <td>Относительно пред. мес.</td>
+      <td>
+        <div class="bar-shadow">
+            <div class="bar" 
+              [style.background-color]="getAnalysisProps(data.analysis.reportPrevMonth).background" 
+              [style.color]="getAnalysisProps(data.analysis.reportPrevMonth).font"  
+              [style.width.px]="getAnalysisProps(data.analysis.reportPrevMonth).width">
+              <b>{{data.analysis.reportPrevMonth}}%</b>  
+            </div>
+        </div>
+      </td>
+    </tr>
+    <tr>
+      <td>Относительно среднего по пред. 5ти мес.</td>
+      <td>
+        <div class="bar-shadow">
+          <div class="bar" 
+            [style.background-color]="getAnalysisProps(data.analysis.reportAvg5Months).background" 
+            [style.color]="getAnalysisProps(data.analysis.reportAvg5Months).font"  
+            [style.width.px]="getAnalysisProps(data.analysis.reportAvg5Months).width">
+            <b>{{data.analysis.reportAvg5Months}}%</b>  
+          </div>
+        </div>      
+      </td>
+    </tr>
+    <tr>
+      <td>Относительно пред мес.</td>
+      <td>
+        <div class="bar-shadow">
+          <div class="bar" 
+            [style.background-color]="getAnalysisProps(data.analysis.prevMonth).background" 
+            [style.color]="getAnalysisProps(data.analysis.prevMonth).font"  
+            [style.width.px]="getAnalysisProps(data.analysis.prevMonth).width">
+            <b>{{data.analysis.prevMonth}}%</b>  
+          </div>
+        </div>      
+      </td>
+    </tr>
+    <tr>
+      <td>В среднем по предыд 5ти мес</td>
+      <td>
+        <div class="bar-shadow">
+          <div class="bar" 
+            [style.background-color]="getAnalysisProps(data.analysis.avg5Months).background" 
+            [style.color]="getAnalysisProps(data.analysis.avg5Months).font"  
+            [style.width.px]="getAnalysisProps(data.analysis.avg5Months).width">
+            <b>{{data.analysis.avg5Months}}%</b>  
+          </div>
+        </div>        
+      </td>
+    </tr>
+  </tbody>
 </table>
+<!--<ng-container matColumnDef="reportPrevMonth">
+  <th mat-header-cell *matHeaderCellDef>Относительно <br> пред. мес. </th>
+  <td mat-cell *matCellDef="let row">{{row.reportPrevMonth}}</td>
+</ng-container>
+<ng-container matColumnDef="reportAvg5Months">
+  <th mat-header-cell *matHeaderCellDef>Относительно <br> Среднего по пред. 5ти мес.</th>
+  <td mat-cell *matCellDef="let row">{{row.reportAvg5Months}}</td>
+</ng-container>
+<ng-container matColumnDef="prevMonth">
+  <th mat-header-cell *matHeaderCellDef>Пред. месяц </th>
+  <td mat-cell *matCellDef="let row">{{row.prevMonth}}</td>
+</ng-container>
+<ng-container matColumnDef="avg5Months">
+  <th mat-header-cell *matHeaderCellDef>В среднем по пред. 5ти мес. </th>
+  <td mat-cell *matCellDef="let row">{{row.avg5Months}}</td>
+</ng-container>-->
