--- a/WebUI/ClientApp/src/styles.sass
+++ b/WebUI/ClientApp/src/styles.sass
@@ -6,6 +6,7 @@ body
     margin: 0
     padding: 0
     position: relative
+    font-family: Roboto,"Helvetica Neue", sans-serif
 
 table 
     width: 100%
