--- a/WebUI/ClientApp/src/app/manager-rm/clients/dialogs/week-plans/week-plans-dialog.component.html
+++ b/WebUI/ClientApp/src/app/manager-rm/clients/dialogs/week-plans/week-plans-dialog.component.html
@@ -42,7 +42,7 @@
   </div>
 </div>
 
-<table>
+<table style="margin-bottom: 40px">
     <thead>
       <tr>
         <th style="background-color: #F1F8FF" width="50"></th>
