модальки итогов звонков и проставления звонков

--- a/WebUI/ClientApp/src/app/manager-rm/clients/dialogs/calls-dates-dialog/calls-dates-dialog.component.html
+++ b/WebUI/ClientApp/src/app/manager-rm/clients/dialogs/calls-dates-dialog/calls-dates-dialog.component.html
@@ -9,7 +9,7 @@
     <small>июнь</small>
   </div> 
   <div>
-    <button class="back">Итоги звонков за месяц</button>
+    <button class="back" (click)="openCallsResult()">Итоги звонков за месяц</button>
   </div>
 </div>
 
