--- a/WebUI/ClientApp/src/app/manager-rm/clients/dialogs/calls-dates-dialog/calls-dates-dialog.component.sass
+++ b/WebUI/ClientApp/src/app/manager-rm/clients/dialogs/calls-dates-dialog/calls-dates-dialog.component.sass
@@ -24,6 +24,9 @@
     color: #557B91
     padding: 0px
     padding-bottom: 50px
+    .mat-dialog-content
+        margin: 0
+        padding: 0
 
 .dialog-subtitle
     text-align: center
