--- a/WebUI/ClientApp/src/app/manager-rm/clients/dialogs/calls-result-dialog/calls-result-dialog.component.html
+++ b/WebUI/ClientApp/src/app/manager-rm/clients/dialogs/calls-result-dialog/calls-result-dialog.component.html
@@ -3,7 +3,7 @@
 
 <div class="dialog-subtitle">
   <div>
-    <button class="back">Назад</button>
+    <button class="back" (click)="close()">Назад</button>
   </div>
   <div>
     <h3>Итоги звонков за месяц</h3>
