--- a/WebUI/ClientApp/src/app/manager-rm/clients/components/client-list/client-list.component.html
+++ b/WebUI/ClientApp/src/app/manager-rm/clients/components/client-list/client-list.component.html
@@ -123,23 +123,18 @@
           </ng-container>
 
 
-          <ng-container matColumnDef="calls">
-            <th mat-header-cell *matHeaderCellDef>Даты и звонки</th>
-            <td mat-cell *matCellDef="let element">
-              <button mat-raised-button (click)="openCallsDates(element)">Перейти</button>
-            </td>
-          </ng-container>
+
 
           <ng-container matColumnDef="MSresults.sum">
             <th mat-header-cell *matHeaderCellDef style="background-color: #f0fdf4">МС</th>
-            <td mat-cell *matCellDef="let element" (click)="openCallsResult(element)">
+            <td mat-cell *matCellDef="let element" (click)="openCallsDates(element)">
               {{getSumOfCallsDates(element.MSCallsDates)}}
             </td>
           </ng-container>
 
           <ng-container matColumnDef="RMresults.sum">
             <th mat-header-cell *matHeaderCellDef style="background-color: #f5fdf0">РМ</th>
-            <td mat-cell *matCellDef="let element" (click)="openCallsResult(element)"> 
+            <td mat-cell *matCellDef="let element" (click)="openCallsDates(element)"> 
               {{getSumOfCallsDates(element.RMCallsDates)}}
             </td>
           </ng-container>
@@ -167,20 +162,12 @@
               <th mat-header-cell *matHeaderCellDef [attr.colspan]="2" style="text-align: center; background-color: #d7f5ff; color: #94c3cb">План по задачам </th>
           </ng-container>
 
-          <ng-container matColumnDef="filler2">
-              <th mat-header-cell *matHeaderCellDef 
-                  [style.text-align]="center"
-                  [attr.colspan]="1"
-                  style="background-color: #fff"> 
-          
-              </th>
-            </ng-container>
 
           <ng-container matColumnDef="allResults">
               <th mat-header-cell *matHeaderCellDef [attr.colspan]="2" style="text-align: center; background-color: #e9fff2; color: #8db39a">Итоги </th>
           </ng-container>
           
-          <tr class="sub-header" mat-header-row *matHeaderRowDef="['filler', 'allCalls', 'trips', 'todos', 'filler2', 'allResults']" style="height: 30px"></tr>
+          <tr class="sub-header" mat-header-row *matHeaderRowDef="['filler', 'allCalls', 'trips', 'todos', 'allResults']" style="height: 30px"></tr>
         
           <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
           <tr mat-row *matRowDef="let row; columns: displayedColumns;" (dblclick)="openEditClientForm(row)"></tr>
