--- a/WebUI/ClientApp/src/app/manager-rm/clients/dialogs/week-plans/week-plans-dialog.component.sass
+++ b/WebUI/ClientApp/src/app/manager-rm/clients/dialogs/week-plans/week-plans-dialog.component.sass
@@ -77,6 +77,8 @@ table
         text-align: center
         transition: 0.3s
         cursor: pointer
+        &:hover
+            background-color: #CBE3FF !important
     td
         padding: 15px 10px
         cursor: pointer
