--- a/WebUI/ClientApp/src/app/manager-rm/clients/components/client-list/client-list.component.html
+++ b/WebUI/ClientApp/src/app/manager-rm/clients/components/client-list/client-list.component.html
@@ -18,7 +18,7 @@
         
           <ng-container matColumnDef="type">
             <th mat-header-cell *matHeaderCellDef>Тип</th>
-            <td mat-cell *matCellDef="let element">{{element.type | clientTypeTranslate}} </td>
+            <td mat-cell *matCellDef="let element">{{element.clientType | clientTypeTranslate}} </td>
           </ng-container>
         
           <ng-container matColumnDef="numberOfCalls">
@@ -31,7 +31,7 @@
             <td mat-cell *matCellDef="let element">{{element.numberOfShipments | numberOfShipmentsTranslate}} </td>
           </ng-container>
         
-          <ng-container matColumnDef="nomenclatureAnalysis">
+          <!--<ng-container matColumnDef="nomenclatureAnalysis">
             <th mat-header-cell *matHeaderCellDef>Номен-ра</th>
             <td mat-cell *matCellDef="let element" (click)="openNomenclatureAnalysis(element)">
               <div class="bar-shadow">
@@ -43,12 +43,11 @@
                 </div>
               </div>
             </td>
-          </ng-container>
+          </ng-container>-->
         
-          <ng-container matColumnDef="revenueAnalysis">
+          <!--<ng-container matColumnDef="revenueAnalysis">
             <th mat-header-cell *matHeaderCellDef>Выручка</th>
             <td mat-cell *matCellDef="let element" 
-            
             (click)="openRevenueAnalysis(element)">
             <div class="bar-shadow">
                 <div class="bar" 
@@ -60,35 +59,33 @@
                   </b>
                 </div>
             </div>
-            
-            
           </td>
-          </ng-container>
+          </ng-container>-->
         
           <ng-container matColumnDef="callPlan.collective">
             <th mat-header-cell *matHeaderCellDef style="background-color: #fdf6fd">План</th>
-            <td mat-cell *matCellDef="let element">{{element.callPlan?.collective}} </td>
+            <td mat-cell *matCellDef="let element">{{element.callPlan?.totalCalls}} </td>
           </ng-container>
           
           <ng-container matColumnDef="callPlan.MS">
             <th mat-header-cell *matHeaderCellDef style="background-color: #ffeeff">МС</th>
             <td mat-cell *matCellDef="let element">
               <mat-form-field class="numberInputField">
-                <input matInput [(ngModel)]="element.callPlan.MS" style="font-weight: bold; color: #61717e" (focusout)="updateClient(element)"/>
+                <input matInput [(ngModel)]="element.callPlan.escortManagerCalls" style="font-weight: bold; color: #61717e" (focusout)="updateCallPlan(element.callPlan)"/>
               </mat-form-field>        
             </td>
           </ng-container>
         
           <ng-container matColumnDef="callPlan.RM">
             <th mat-header-cell *matHeaderCellDef style="background-color: #ffeeff">РМ</th>
-            <td mat-cell *matCellDef="let element" style="font-weight: bold; color: #61717e">{{element.callPlan?.RM}} </td>
+            <td mat-cell *matCellDef="let element" style="font-weight: bold; color: #61717e">{{element.callPlan?.regionalManagerCalls}} </td>
           </ng-container>
         
           <ng-container matColumnDef="tripPlan.planned" >
             <th mat-header-cell *matHeaderCellDef style="background-color: #f7f8fd">План</th>
             <td mat-cell *matCellDef="let element">
               <mat-form-field class="numberInputField">
-                <input matInput [(ngModel)]="element.tripPlan.planned" (focusout)="updateClient(element)"/>
+                <input matInput [(ngModel)]="element.tripPlan.hours" (focusout)="updateTripPlanHours(element.tripPlan)"/>
               </mat-form-field>  
             </td>
           </ng-container>
@@ -97,55 +94,49 @@
               <th mat-header-cell *matHeaderCellDef style="background-color: #f0f4ff">Факт</th>
               <td mat-cell *matCellDef="let element">
                 <mat-form-field class="numberInputField">
-                  <mat-select [(ngModel)]="element.tripPlan.fact" (focusout)="updateClient(element)">
-                    <mat-option [value]="1">1</mat-option>
-                    <mat-option [value]="0.5">0.5</mat-option>
-                    <mat-option [value]="0.3">0.3</mat-option>
+                  <mat-select [(ngModel)]="element.tripPlan.completedType" (selectionChange)="updateTripPlanCompletedType(element.tripPlan)">
+                    <mat-option [value]="30">1</mat-option>
+                    <mat-option [value]="20">0.5</mat-option>
+                    <mat-option [value]="10">0.3</mat-option>
                     <mat-option [value]="0">0</mat-option>
                   </mat-select>
                 </mat-form-field>
               </td>
             </ng-container>
-      
-        
+       
           <ng-container matColumnDef="MSplanned">
             <th mat-header-cell *matHeaderCellDef style="background-color: #f0fbff">Теущий МС</th>
             <td mat-cell *matCellDef="let element" (click)="openWeekPlans(element)">
-              {{getCurrentWeek(element.weekPlans).MSplanned}}
+              {{getCurrentMsPlan(element.weekPlans).plan}}
             </td>
           </ng-container>
 
           <ng-container matColumnDef="RMplanned">
             <th mat-header-cell *matHeaderCellDef style="background-color: #e3f7ff">Текущий РМ </th>
             <td mat-cell *matCellDef="let element" (click)="openWeekPlans(element)">
-              {{getCurrentWeek(element.weekPlans).RMplanned}}
+              {{getCurrentRmPlan(element.weekPlans).fact}}
             </td>
           </ng-container>
-
-
-
 
           <ng-container matColumnDef="MSresults.sum">
             <th mat-header-cell *matHeaderCellDef style="background-color: #f0fdf4">МС</th>
             <td mat-cell *matCellDef="let element" (click)="openCallsDates(element)">
-              {{getSumOfCallsDates(element.MSCallsDates)}}
+              {{element.managerCallsResults.escortTotalContacts}}
             </td>
           </ng-container>
 
           <ng-container matColumnDef="RMresults.sum">
             <th mat-header-cell *matHeaderCellDef style="background-color: #f5fdf0">РМ</th>
             <td mat-cell *matCellDef="let element" (click)="openCallsDates(element)"> 
-              {{getSumOfCallsDates(element.RMCallsDates)}}
+              {{element.managerCallsResults.regionalTotalContacts}}
             </td>
           </ng-container>
 
           <ng-container matColumnDef="filler">
               <th mat-header-cell *matHeaderCellDef 
                   [style.text-align]="center"
-                  [attr.colspan]="7"
-                  style="background-color: #fff"> 
-                  
-
+                  [attr.colspan]="5"
+                  style="background-color: #fff">                
               </th>
             </ng-container>
             
